# tauri-cpp

./: .gitignore  README.md  jest.config.js  package.json  pnpm-lock.yaml
src/: editor.css  editor.tsx  main.tsx
src-cpp/: .clang-format  .clang-tidy  CMakeLists.txt
src-cpp/src/: Responce.hpp  TauriCpp.cpp  TauriCpp.hpp
src-cpp/src/Invoker/: Invoke.hpp
src-cpp/src/action/: File.cpp  File.hpp
src-cpp/src/invoker/: Invoke.hpp
src-cpp/src/utility/: Endian.hpp
src-cpp/test/: Endian.cpp  Invoke.cpp
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/model/: model.ts  modellogic.test.ts  modellogic.ts
src/store/: bindata-store.ts  dummy-store.ts
src/tauri/: tauri-communicator.test.ts  tauri-communicator.ts  tauri-cpp-datastore.ts
